--- a/FrontEND/html/addmenu.html
+++ b/FrontEND/html/addmenu.html
@@ -21,7 +21,7 @@ body {font-family: "Times New Roman", Georgia, Serif;}
       <a href="../home.html" class="hh-bar-item hh-button"><h6>HH</h6></a>
     </div>
     <div class="hh-display-middle">
-      <h1 class="hh-jumbo hh-animate-top">HELPING HANDS</h1>
+      <h1 class="hh-jumbo hh-animate-top">Restaurant</h1>
       <hr class="hh-border-grey" style="margin:auto;width:40%">
       <p class="hh-large hh-center">Come Online With Us</p>
     </div>
@@ -38,18 +38,13 @@ body {font-family: "Times New Roman", Georgia, Serif;}
 
   
 
-  <!--Adding Restaurant Section -->
-  <div class="hh-container hh-padding-64" id="addrestro">
-    <h1>Add yourself!</h1><br>
-    <h3><p class="hh-text-blue-grey hh-large"><b>Enter Your details!</b></p></h3>
-    <!-- <p>You can also contact us by phone 00553123-2323 or email helpinghands@gmail.com, or you can send us a message here:</p> -->
-    <form method="post" id="add_rest" >
-      <p><input class="hh-input hh-padding-16" type="text" placeholder="Name of Restaurant" required name="Nameofrestro" id="r_name"></p>
-      <p><input class="hh-input hh-padding-16" type="text" placeholder="Tag-Line" required name="tagline" id="r_tl"></p>
-      <p><input class="hh-input hh-padding-16" type="email" placeholder="Email" required name="Email" id="r_email"></p>
-      <p><input class="hh-input hh-padding-16" type="text" placeholder="Address" required name="Address" id="r_address"></p>
-      <p><input class="hh-input hh-padding-16" type="number" placeholder="Mobile Number" required name="Mobnum" id="r_mb"></p>
-      <p><input class="hh-input hh-padding-16" type="text" placeholder="Food-License" required name="license" id="r_fl"></p>
+  <!--Adding Menu Section -->
+  <div class="hh-container hh-padding-64" id="addmenu">
+    <h1>Add Menu!</h1><br>
+    <h3><p class="hh-text-blue-grey hh-large"><b>Enter Your details!</b></p></h3><br><br>
+    <form  id="menu_form">
+      <p><input class="hh-input hh-padding-16" type="text" placeholder="Name of Item" required name="Nameofitem" id="i_name"></p>
+      <p><input class="hh-input hh-padding-16" type="number" placeholder="Price of Item" required name="price" id="i_price"></p>
       <p><button class="hh-button hh-light-grey hh-section" type="submit">Add</button></p>
     </form>
   </div>
@@ -68,6 +63,6 @@ body {font-family: "Times New Roman", Georgia, Serif;}
 <footer class="hh-center hh-light-grey hh-padding-32">
   <p>Copyright @<a href="#home" title="Helping Hands" class="hh-hover-text-green">Helping Hands</a> 2021</p>
 </footer>
-<script src="../scripts/addrestro.js"></script>
+<script src="../scripts/addmenu.js"></script>
 </body>
 </html>
